--- a/Desafios/des12/style/style.css
+++ b/Desafios/des12/style/style.css
@@ -17,6 +17,7 @@ header h1{
     font-family: 'Passion One', cursive;
     color: white;
     font-size: 9vw;
+    font-variant: small-caps;
 }
 
 header p{
